--- a/core/uikit/src/main/res/values/strings.xml
+++ b/core/uikit/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">GuitarAssistant</string>
+
+    <string name="bottom_navigation_songs_title">Songs</string>
+    <string name="bottom_navigation_artists_title">Artists</string>
+    <string name="bottom_navigation_home_title">Home</string>
 </resources>
