Created login feature module implementation

--- a/core/uikit/src/main/res/values/strings.xml
+++ b/core/uikit/src/main/res/values/strings.xml
@@ -1,7 +1,10 @@
 <resources>
     <string name="app_name">GuitarAssistant</string>
+    <string name="content_description_app_logo">Application logo</string>
 
     <string name="bottom_navigation_songs_title">Songs</string>
     <string name="bottom_navigation_artists_title">Artists</string>
     <string name="bottom_navigation_home_title">Home</string>
+
+    <string name="feature_login__sign_in_with_google">Sign in with Google</string>
 </resources>
