--- a/core/uikit/src/main/res/values/strings.xml
+++ b/core/uikit/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="bottom_navigation_home_title">Home</string>
 
     <string name="feature_login__sign_in_with_google">Sign in with Google</string>
+    <string name="feature_login__try_demo_login">Try demo</string>
 </resources>
