Created album list feature logic

--- a/core/uikit/src/main/res/values/strings.xml
+++ b/core/uikit/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="feature_artist__link_twitter">Twitter</string>
     <string name="feature_artist__link_youtube">Youtube</string>
     <string name="feature_artist__link_unknown">Link</string>
+
+    <string name="feature_album__list_toolbar_title">Albums</string>
 </resources>
