--- a/core/uikit/src/main/res/values/strings.xml
+++ b/core/uikit/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="feature_artist__link_unknown">Link</string>
 
     <string name="feature_album__list_toolbar_title">Albums</string>
+    <string name="feature_album__details_song_list_item_dot">.</string>
+    <string name="feature_album__details_subtitle_divider">-</string>
 </resources>
