--- a/core/uikit/src/main/res/values/strings.xml
+++ b/core/uikit/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
 
     <string name="feature_artist__list_item_information">%s albums - %s songs</string>
     <string name="feature_artist__detail_all_songs">Tracks</string>
-    <string name="feature_artist__detail_all_albums">Albums</string>
+    <string name="feature_artist__detail_albums">Albums</string>
     <string name="feature_artist__detail_links">Links</string>
     <string name="feature_artist__link_facebook">Facebook</string>
     <string name="feature_artist__link_instagram">Instagram</string>
@@ -19,6 +19,7 @@
     <string name="feature_artist__link_youtube">Youtube</string>
     <string name="feature_artist__link_unknown">Link</string>
 
-    <string name="feature_album__details_song_list_item_dot">.</string>
-    <string name="feature_album__details_subtitle_divider">-</string>
+    <string name="feature_album__detail_song_list_item_dot">.</string>
+    <string name="feature_album__detail_subtitle_divider">-</string>
+    <string name="feature_album__detail_tracks">Tracks</string>
 </resources>
